--- a/src/components/about/carousel.css
+++ b/src/components/about/carousel.css
@@ -24,6 +24,17 @@ body {
   width: 100%;
   height: 100%;
 }
+.swiper-pagination-bullet-active {
+  background-color: #e36ee1;
+}
+
+.swiper-button-next{
+  color: #e36ee1;
+}
+
+.swiper-button-prev{
+  color: #e36ee1;
+}
 
 .swiper-slide {
   text-align: center;
