--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,23 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 
+#root{
+  height: 100%;
+}
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 .delius-regular {
   font-family: "Delius", cursive;
   font-weight: 400;
   font-style: normal;
+}
+
+.nav-link.active {
+  @apply text-blue-500 font-bold;
 }
 
 @keyframes float {
